<resources>
    <string name="app_name">Ecole Assistant</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_option1">Item1</string>
    <string name="drawer_item_option2">Item2</string>
    <string name="drawer_item_option3">Item3</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_contact">Contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="classes">Classes</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="discover">Discover</string>
    <string name="explore">Explore</string>
    <string name="drawer_item_logout">Logout</string>
    <string name="drawer_item_name">Name</string>
    <string name="drawer_item_calendar">Calendar</string>
    <string name="drawer_item_attendance">attendance</string>
    <string name="drawer_item_due">What\'s Due</string>
    <string name="drawer_item_grades">Grades</string>
    <string name="drawer_item_folders">Folders</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name</string>
    <string name="tel_number">Phone Number</string>
    <string name="email_address_hint">Email Address</string>
    <string name="agree_terms"><![CDATA[ By signing up, you agree to our<b><font color=#091555> terms of Service</b> \n and <b><font color=#091555>Privacy Policy</b>]]></string>
    <string name="failed">Authentication failed</string>
    <string name="login_button">Login</string>
    <string name="reset_title">Recover Password</string>
    <string name="submit_button">Submit</string>
    <string name="create_button">Create Parent Account</string>

    <string name="full_content">Schools App</string>
    <string name="full_content1">For Parents</string>
    <string name="login_here">Already have an account? </string>
    <string name="title_activity_login">Sign in</string>
    <string name="create_account">Create Your Account</string>
    <string name="signup_google">Sign up with Google</string>
    <string name="password_hint">Password</string>
    <string name="divider_or">OR</string>
    <string name="sign_in">Sign in</string>
    <string name="login_title">Login to your Account</string>
    <string name="login_parent_title">Login to Parent Account</string>
    <string name="login_google">Sign in with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="drawer_item_assignment">Assignment</string>
    <string name="stream">Stream</string>
    <string name="classwork">Classwork</string>
    <string name="people">People</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_due_date">No due date</string>
    <string name="due">Due</string>
    <string name="hello_world_classwork">Hello World Classwork</string>
    <string name="edittext_hint"><font size="12" />Start typing</string>
    <string name="find_friend">Find Firend</string>
    <string name="req_sent">Request Sent</string>
    <string name="sent_req_to">Send request to</string>
    <string name="wanna_connect">want to connect with you.</string>
    <string name="message">Message...</string>
    <string name="display_name">Display User Name</string>
    <string name="add_friend">Add Friend</string>
    <string name="cancel_invite">Cancel invite</string>

    <string name="note_added">Note added !</string>
    <string name="enter_note">Please enter note.</string>
    <string name="date_of_update">Date of update:</string>
    <string name="enter_informations">Please enter informations.</string>
    <string name="note_updated">Note updated !</string>
    <string name="note_deleted">Note deleted !</string>
    <string name="note_title">Note Title ...</string>
    <string name="note_hint">Note ...</string>
    <string name="created_date">Created Date :</string>
    <string name="notes">Notes</string>
    <string name="note_title2">Note Title</string>
    <string name="note"> Note</string>
    <string name="created_date2">CreatedDate</string>
    <string name="title">Title</string>
    <string name="assignment">Assignment</string>
    <string name="enter_assignment">Enter assignment</string>
    <string name="assignment_added">Assignment Added</string>
    <string name="assignment_updated">Assignment Updated</string>
    <string name="assignment_deleted">Assignment Deleted</string>
    <string name="class_title">Class Title</string>
    <string name="class_added">Class added</string>
    <string name="enter_class">Please enter class...</string>

    <!-- framgments -->
    <string name="title_class">Class Activity</string>
    <string name="title_due">What\'s Due</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="class_activity">Class Activity Fragment</string>ue
    <string name="whatsdue">What\'s Due Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="settings">Settings Fragment</string>
    <string name="attendance_fragment">Attendance Fragment</string>
    <string name="consultation_fragment">Consultation</string>
    <string name="chat_fragment">Chat</string>
    <string name="logout">Logout</string>
    <string name="reset_msg">Enter your email adress to receive a\npassword reset email</string>

    <string name="add_student">Add Student</string>
    <string name="students_and_classes">Students and Classes</string>
    <string name="my_personal_info">Account Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="change_password">Change Password</string>
    <string name="privacy">Privacy</string>
    <string name="notifcations">Notifications</string>
    <string name="security_login">Security and Login</string>
    <string name="pref_title_new_message_notifications">New message Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="class_updates">Class Updates</string>
    <string name="setting">Settings</string>
    <string name="title_class_updates">Class Updates</string>
    <string name="action_addStudent_message">You selected AddStudent</string>
    <string name="profile">Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="parent">Parent</string>
    <string name="who_are_you">Who are you?</string>
    <string name="teacher">Teacher</string>
    <string name="add_attachment">Add attachment</string>
    <string name="send">send</string>
    <string name="signup_title">Create your Account</string>
    <string name="signUpUserType">User Type</string>
    <string name="about">About</string>
    <string name="find_parent_teacher">Find parent or teacher</string>
    <string name="whatsdue_act">What\'s Due</string>
    <string name="add_parent">Add Parent to Class</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_to_class">Add to Class</string>
    <string name="wanna_add_class">Want to add you in his Class</string>
    <string name="post_update_desc">Share a Class update with parents...</string>
    <string name="post_sent">Post Sent</string>
    <string name="post_updated">Post Updated</string>
    <string name="post_deleted">Post Deleted</string>
    <string name="post_added">Post Added</string>
    <string name="write_post">Write post to parents</string>
    <string name="class_desc">Class Description</string>


</resources>
