<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="com.example.schoolteacher.parents.SettingsParentsActivity$StudentsPreferenceFragment"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/students_and_classes" />

    <header
        android:fragment="com.example.schoolteacher.parents.SettingsParentsActivity$InformationPreferenceFragment"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/my_personal_info" />

    <header
        android:fragment="com.example.schoolteacher.parents.SettingsParentsActivity$SecurityPreferenceFragment"
        android:icon="@drawable/ic_lock"
        android:title="@string/security_login" />

    <header
        android:fragment="com.example.schoolteacher.parents.SettingsParentsActivity$NotificationsPreferenceFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifcations" />

</preference-headers>