<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:fragment="com.example.schoolteacher.parents.SettingsParentsActivity$InformationPreferenceFragment">

    <Preference android:layout="@layout/preference_list_content"/>

    <EditTextPreference
        android:id="@+id/name"
        android:defaultValue="@string/first_name"
        android:inputType="textCapWords"
        android:key="first_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/first_name" />
    <EditTextPreference
        android:defaultValue="@string/last_name"
        android:inputType="textCapWords"
        android:key="last_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/last_name" />
    <EditTextPreference
        android:defaultValue="@string/email_address_hint"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/email_address_hint" />


</PreferenceScreen>