<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    tools:context=".login.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:text="@string/login_title"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="150dp">

        <RelativeLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_centerInParent="true">

        </RelativeLayout>

        <EditText
            android:id="@+id/et_email_address"
            android:layout_below="@id/divider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/mygooglebutton"
            android:textSize="17sp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_below="@id/et_email_address"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:textSize="17sp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/mygooglebutton"
            android:padding="10dp"/>

        <Spinner
            android:id="@+id/signUpUserType"
            android:layout_width="201dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:prompt="@string/signUpUserType"
            android:layout_below="@id/et_password"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.56" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="155dp"
        android:layout_gravity="bottom|center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@drawable/mybutton"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="#091555"
            android:textSize="17sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_helper"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_gravity="top|center_horizontal"
            android:background="@drawable/mybutton"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:elevation="5dp"
            android:indeterminateTint="#091555"
            android:maxWidth="24dp"
            android:maxHeight="24dp"
            android:minWidth="24dp"
            android:minHeight="24dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:clickable="true"
            android:focusable="true"
            android:textColor="#091867"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_below="@id/login_btn"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_below="@id/forgot"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/no_account"
                android:textColor="#E9000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/signup_here_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="6dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="#091867"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>