<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/reset_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/reset_title"
        android:textColor="#000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reset_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_content"
        android:keepScreenOn="true"
        android:layout_marginTop="16dp"
        android:text="@string/reset_msg"
        android:gravity="center_horizontal"
        android:textColor="#000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email_address"
        android:layout_below="@id/reset_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="330dp"
        android:background="@drawable/mygooglebutton"
        android:textSize="17sp"
        android:padding="10dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_email_address"
        android:layout_marginTop="24dp">

        <View
            android:id="@+id/view_helper"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_gravity="top|center_horizontal"
            android:background="@drawable/mybutton"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:elevation="5dp"
            android:indeterminateTint="#091555"
            android:maxWidth="24dp"
            android:maxHeight="24dp"
            android:minWidth="24dp"
            android:minHeight="24dp"
            android:visibility="invisible" />


        <Button
            android:id="@+id/reset_btn"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/mybutton"
            android:text="@string/submit_button"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textColor="#091555"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>





</RelativeLayout>