<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignupActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fullscreen_content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:text="@string/signup_title"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/divider"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">


        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TiEt_name"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="17sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TiEt_email"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/TiEt_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_address"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_address_hint"
                android:imeOptions="actionNext"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="17sp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TiEt_password"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/TiEt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:imeOptions="actionNext"
                android:layout_marginTop="8dp"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="17sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/signUpUserType"
            android:layout_width="201dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:prompt="@string/signUpUserType"
            android:layout_below="@id/TiEt_password"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.56" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_gravity="bottom|center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_btn"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@drawable/mybutton"
            android:elevation="1dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="#091555"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <View
            android:id="@+id/view_helper"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_gravity="top|center_horizontal"
            android:background="@drawable/mybutton"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:elevation="5dp"
            android:indeterminateTint="#091555"
            android:maxWidth="24dp"
            android:maxHeight="24dp"
            android:minWidth="24dp"
            android:minHeight="24dp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="57dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_here"
                    android:textColor="#E9000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/login_here_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="signIn"
                    android:text="@string/sign_in"
                    android:textColor="#091867"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/agree_terms"
                android:textColor="#E9000000"
                android:textSize="15sp" />



        </LinearLayout>

    </FrameLayout>

</FrameLayout>